packages/elvis/src/components/form/fileupload.scss
@use '../../utilities/icons';
@use '../../variables/colors';
@use '../../variables/typography';
@use '../../utilities/helpers';

.e-fileupload {
  display: flex;
  flex-wrap: wrap;
  padding: 32px 0;
  border: 2px dashed colors.color('grey-20');
  border-radius: 4px;
  gap: 16px;

  &__icon,
  &__description,
  &__input {
    display: grid;
    width: 100%;
    place-items: center;
  }

  &__description {
    @include typography.typography('text-option');
    color: colors.color('font-color');
  }

  &__input {
    input[type='file'] {
      display: none;
    }

    label {
      z-index: 1;
      display: inline-flex;
      align-items: center;
      padding: 0;
      padding-bottom: 3.5px;
      border-radius: 0;
      border-bottom: 2.5px solid transparent;
      color: colors.color('font-color');
      cursor: pointer;

      font-family: 'Red Hat Display', Verdana, sans-serif;
      font-size: 16px;
      font-style: normal;
      font-weight: 500;
      line-height: 24px;
      @include helpers.hover() {
        &:hover {
          border-color: colors.color('elvia-charge');
        }
      }

      &:disabled {
        color: colors.color('disabled');
        cursor: not-allowed;
      }

      &:active {
        padding-bottom: 4.5px;
        border-bottom: 1.5px solid colors.color('elvia-charge');
      }

      i {
        @include icons.icon-size('sm');
        display: flex;
        margin-right: 8px;
      }
    }
  }

  &--dragover {
    border-color: colors.color('elvia-charge');
  }

  // DEPRECATED
  /* stylelint-disable -- Do not lint deprecated styles */
  &---hover {
    border-color: colors.color('elvia-charge');
  }
  /* stylelint-enable */
}

